# stm32u575-psicontrol

./: .gitignore  2024-07-01.md  2024-07-02.md  Cargo.toml  README.md  drawings.excalidraw  findings.md  lib.lib  rustfmt.toml  tooling.md
.cargo/: config.toml
cubeide/adc/: .cproject  .mxproject  .project  adc Debug.launch  adc rust.launch  adc.ioc
cubeide/adc/Core/Inc/: main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h
cubeide/adc/Core/Src/: main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
cubeide/adc/Debug/: adc.elf  adc.hex  adc.list  adc.map  makefile
cubeide/adc/Release/: adc.elf  adc.hex  adc.list  adc.map  makefile  objects.list
cubeide/button-interrupt-then-set/: .cproject  .mxproject  .project  ADC RUST.launch  button-interrupt-then-set Release.launch  button-interrupt-then-set.ioc  button-interrupt-then-set.launch  stm32u5-first-steps Debug.cfg  stm32u5-first-steps Debug.launch  stm32u5-first-steps Release.launch
cubeide/button-interrupt-then-set/Core/Inc/: stm32u5xx_it.h
cubeide/button-interrupt-then-set/Core/Src/: main.c  (+2 more)
cubeide/button-interrupt-then-set/Debug/: button-interrupt-then-set.elf  button-interrupt-then-set.map  makefile  stm32u5-first-steps.list  stm32u5-first-steps.map
cubeide/button-interrupt-then-set/Release/: button-interrupt-then-set.elf  button-interrupt-then-set.hex  button-interrupt-then-set.list  button-interrupt-then-set.map  interrupt-button-then-set.list  interrupt-button-then-set.map  makefile  stm32u5-first-steps.list  stm32u5-first-steps.map  wfi-btn-set-led.list  wfi-btn-set-led.map
cubeide/button-polling-then-set/: .cproject  .project  button-polling Debug.launch  button-polling-then-set Debug.launch  button-polling-then-set Release.launch  button-polling-then-set.ioc
cubeide/button-polling-then-set/Debug/: button-polling-then-set.elf  button-polling-then-set.list  button-polling-then-set.map  makefile  sources.mk
cubeide/button-polling-then-set/Release/: button-polling-then-set.elf  button-polling-then-set.hex  button-polling-then-set.list  button-polling-then-set.map  makefile
cubeide/pin-toggle-fast/: .cproject  .mxproject  .project  fast-toggle Debug.launch  fast-toggle Release.launch  pin-toggle-fast Debug.launch  pin-toggle-fast-raw Release.launch  pin-toggle-fast.ioc  pin-toggle-fast.launch
cubeide/pin-toggle-fast-raw/: .cproject  .project  pin-toggle-fast Release.launch  pin-toggle-fast-raw Debug.launch  pin-toggle-fast-raw Release.launch  pin-toggle-fast-raw.ioc  pin-toggle-fast-raw.launch
cubeide/pin-toggle-fast-raw/Debug/: makefile  pin-toggle-fast-raw.elf  pin-toggle-fast-raw.list  pin-toggle-fast-raw.map
cubeide/pin-toggle-fast-raw/Release/: makefile  pin-toggle-fast-raw.elf  pin-toggle-fast-raw.hex  pin-toggle-fast-raw.list  pin-toggle-fast-raw.map
cubeide/pin-toggle-fast/Debug/: makefile  pin-toggle-fast.elf  pin-toggle-fast.list  pin-toggle-fast.map
cubeide/pin-toggle-fast/Release/: fast-toggle.list  fast-toggle.map  makefile  pin-toggle-fast.elf  pin-toggle-fast.hex  pin-toggle-fast.list  pin-toggle-fast.map
cubeide/pwm-gen/: .cproject  .mxproject  .project  pwm-gen Debug.launch  pwm-gen.ioc  pwm-gen.launch
cubeide/pwm-gen/Debug/: makefile  pwm-gen.elf  pwm-gen.hex  pwm-gen.list  pwm-gen.map
cubeide/pwm-gen/Release/: pwm-gen.elf  pwm-gen.hex  pwm-gen.list  pwm-gen.map
cubeide/stm32-testing/: .cproject  .mxproject  .project  stm32-testing Debug.launch  stm32-testing.ioc
cubeide/stm32-testing/Debug/: makefile  stm32-testing.elf  stm32-testing.list  stm32-testing.map
cubeide/stm32-testing/Release/: makefile  stm32-testing.elf  stm32-testing.list  stm32-testing.map
cubeide/stm32-timing-test/: .cproject  .mxproject  .project  stm32-timing-test.ioc
cubeide/stm32-timing-test/Debug/: makefile  stm32-timing-test.elf  stm32-timing-test.list  stm32-timing-test.map
cubeide/stm32-timing-test/Release/: stm32-timing-test.elf  stm32-timing-test.list  stm32-timing-test.map
cubeide/usart/: .cproject  .mxproject  .project  usart Debug.launch  usart.ioc  usart.launch
cubeide/usart/Debug/: makefile  usart.elf  usart.list  usart.map
cubeide/usart/Release/: makefile  objects.list  objects.mk  sources.mk  usart.elf  usart.hex  usart.list  usart.map
functions/src/: lib.rs  pwm.rs
host-tests/: Cargo.toml
host-tests/tests/: add.rs  pwm.rs
rust/: findings.md  lib.lib  tooling.md
rust/.cargo/: config.toml
rust/.helix/: languages.toml
rust/functions/: Cargo.toml
rust/functions/src/: lib.rs  macros.rs  pwm.rs
rust/functions/src/embassy_trait_impls/: mod.rs
rust/functions/src/messages/: mod.rs
rust/functions/src/password/: mod.rs
rust/host-tests/: Cargo.toml
rust/host-tests/tests/: pwm.rs
rust/stm32u5/: Cargo.toml  build.nu  rustc-ice-2024-07-11T09_09_21-263823.txt  stm32u5.ioc
rust/stm32u5/.cargo/: config.toml
rust/stm32u5/app/: Cargo.toml
rust/stm32u5/app/src/: macros.rs  main.rs
rust/stm32u5/app/src/tasks/: btn_interrupt.rs  cbinder.rs  heap_usage.rs  mod.rs  pwm.rs  spi.rs  uart.rs
rust/stm32u5/baremetal/: Cargo.toml
rust/stm32u5/cbinder-sys/: Cargo.toml  build.rs  example_wrapper.h  wrapper.h
rust/stm32u5/cbinder-sys/cheaders/: stm32u575xx.h  stm32u5xx.h  stm32u5xx_hal_def.h  wrapper.h
rust/stm32u5/cbinder-sys/src/: lib.rs
rust/stm32u5/cbinder/Lib/: addone.h
rust/stm32u5/cbinder/Src/: addone.c
rust/stm32u5/device-tests/: Cargo.toml
rust/stm32u5/device-tests/tests/: device-tests.rs
rust/stm32u5/setup/: Cargo.toml
rust/stm32u5/setup/src/: heap.rs  lib.rs  macros.rs  typedefs.rs
src/: main.rs
src/tasks/: blinky.rs  mod.rs
stm32u5/: Cargo.toml  stm32u5.ioc
stm32u5/.cargo/: config.toml
stm32u5/app/: Cargo.toml
stm32u5/app/src/: macros.rs  main.rs
stm32u5/app/src/tasks/: adc.rs  blinky.rs  btn_interrupt.rs  btn_polling.rs  mod.rs  pwm.rs  toggle_fast.rs  uart.rs  wfi_btn_set_led.rs
stm32u5/baremetal/: Cargo.toml
stm32u5/baremetal/src/: main.rs
stm32u5/device-tests/: Cargo.toml
stm32u5/setup/: Cargo.toml
stm32u5/setup/src/: lib.rs  typedefs.rs
stm32u5/target-tests/: Cargo.toml
stm32u5/target-tests/tests/: target-tests.rs
(+321 files in other folders)
