[package]
name = "stm32u5-first-steps"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "*", features = [
    "defmt",
    "exti",
    "stm32u575zi",
    "time-driver-any",
    "memory-x",
    "rt",
]}
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-4_000_000",      # we need quite a high hz ticker, so we can be more accurate with Instant::now() measurements
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "stm32u5-first-steps"
test = false
harness = false

# [features]
# trustzone-secure = ["embassy-stm32/trustzone-secure"]
