[workspace]
members = ["app", "setup", "device-tests"]
resolver = "2"
default-members = ["app"]

# [profile.dev]
# codegen-units = 1
# incremental = false
# lto = 'fat'
# opt-level = 's'

# [profile.test]
# codegen-units = 1
# incremental = false
# lto = 'fat'
# opt-level = 's'

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
# we could use 'z' here to go even smaller, but this turns of loop vectorization
opt-level = 3
