[workspace]
members = ["app", "baremetal", "cbinder-sys","device-tests", "setup"]
resolver = "2"
default-members = ["app"]

# [profile.dev]
# codegen-units = 1
# incremental = false
# lto = 'fat'
# opt-level = 's'

# [profile.test]
# codegen-units = 1
# incremental = false
# lto = 'fat'
# opt-level = 's'

# [profile.release.package.'embassy-stm32']
# opt-level = 3

[profile.release]
debug = true # can be useful for disassembly or when you want logging in release mode
codegen-units = 16
incremental = false
lto = "fat"
# we could use 'z' here to go even smaller, but this turns of loop vectorization
opt-level = 's'
