[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "exti",
    "stm32u575zi",
    # "time",
    "time-driver-any",
    "memory-x",
    "rt",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-4_000_000",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
embedded-hal = "1.0.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }


## add purely functional code
[dependencies.functions]
version = "0.1.0"
path = "../../functions"

## add setup code 
[dependencies.setup]
version = "0.1.0"
path = "../setup"

[[bin]]
name = "app"
test = false
harness = false
