[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[dependencies]
embassy-stm32 = { path = "../../../embassy/embassy-stm32/", version = "0.1.0", features = [
    "stm32u575zi",
] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645" }

defmt = { version = "0.3.8", optional = true }
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }

[features]
defmt = ["dep:defmt", "embassy-stm32/defmt"]
