[package]
name = "app"
version = "0.1.0"
default-run = "app"
edition = "2021"

[[bin]]
name = "app"
harness = false

[[bin]]
name = "btn_interrupt"
harness = false

[[bin]]
name = "btn_polling"
harness = false

[[bin]]
name = "toggle_fast"
harness = false

# ## add purely functional code
[dependencies.functions]
version = "0.1.0"
path = "../../functions"
default-features = false
features = ["embassy", "alloc", "serde", "defmt"]

## add setup code
[dependencies.setup]
version = "0.1.0"
path = "../setup"
features = ["init", "alloc"]

[dependencies.cbinder-sys]
version = "0.1.0"
path = "../cbinder-sys"

[dependencies]
embassy-executor = { path = "../../../../embassy/embassy-executor", version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-stm32 = { path = "../../../../embassy/embassy-stm32/", version = "0.1.0", features = [
    "defmt",
    "exti",
    "stm32u575zi",     
    "time-driver-any",
    "memory-x",
    "rt",              
] }
embassy-sync = { version = "0.6.0" }
embassy-time = { path = "../../../../embassy/embassy-time", version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-160_000_000",
] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645" }
# stm32-metapac = { path = "../../../../stm32-data/build/stm32-metapac", features = ["stm32u575zi", "rt", "memory-x"] }

defmt = {version = "0.3", default-features = false, features = ["alloc"] }
defmt-rtt = "0.4.1"

alloc-cortex-m = { version = "0.4.4" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
embedded-hal = "1.0.0"

panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
