[package]
name = "baremetal"
version = "0.1.0"
default-run = "baremetal"
edition = "2021"

[[bin]]
name = "baremetal"
harness = false

[[bin]]
name = "adc_raw"
harness = false

## add purely functional code
[dependencies.functions]
version = "0.1.0"
path = "../../functions"

## add setup code
[dependencies.setup]
version = "0.1.0"
path = "../setup"

[dependencies]
# embassy-stm32 = { path = "../../../../embassy/embassy-stm32"}
# stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-e0cfd165fd8fffaa0df66a35eeca83b228496645" }
stm32-metapac = { path = "../../../../stm32-data/build/stm32-metapac", features = ["stm32u575zi", "memory-x", "rt"] }
# embassy-usb = { version = "0.2.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.0" }

# defmt = "0.3"
# defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
embedded-hal = "1.0.0"

panic-probe = { version = "0.3" }
# heapless = { version = "0.8.0", features = ["defmt-03"] }
